--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "express": "^4.17.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.24",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.7"
   }
 }
